--- a/ls30/src/components/AddTeamForm/index.module.css
+++ b/ls30/src/components/AddTeamForm/index.module.css
@@ -4,6 +4,9 @@
     margin: 20px auto;
     border: 3px solid #27ae60;
     border-radius: 10px;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
 
 }
 
